<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>


        <variable
            name="viewModelMenu"
            type="zb.club.thebestoftebest.menu.ViewModelMenu" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#03FFF193">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="113dp"
            android:layout_height="66dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:gravity="top"
            android:textColorHint="@color/yellow_200"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxStrokeColor="@color/on_check_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            app:suffixTextColor="@color/yellow_500">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/adultPortApply"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/adult_portion"
                android:inputType="number"
                android:text="@string/_2"
                android:textColor="@color/yellow_700"
                android:textColorHint="@color/yellow_200" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputAdCh"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="86dp"
            android:layout_height="63dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="top"
            android:textColorHint="@color/yellow_200"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopStart="16dp"
            app:boxStrokeColor="@color/on_check_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            app:suffixTextColor="@color/yellow_500">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/AdCHApply"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/adult_child"
                android:inputType="numberDecimal"
                android:text="@string/_0_7"
                android:textColor="@color/yellow_700"
                android:textColorHint="@color/yellow_200" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout8"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="113dp"
            android:layout_height="66dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="top"
            android:textColorHint="@color/yellow_200"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopStart="16dp"

            app:boxStrokeColor="@color/on_check_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11"
            app:suffixTextColor="@color/yellow_500">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/childrenPortionApply"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/children_portion"
                android:inputType="number"
                android:text="@string/_2"
                android:textColor="@color/yellow_700"
                android:textColorHint="@color/yellow_200" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/how_many_servings_will_we_cook"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/number_of_servings_for_adults"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/number_of_servings_for_children"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

        <Button
            android:id="@+id/buttonCreateApply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_new_menu"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline4" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/children_portion_from_adult_portion"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout8" />



        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            app:layout_constraintGuide_percent="0.15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            app:layout_constraintGuide_percent="0.7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />

        <TextView
            android:id="@+id/textViewTitleapply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="text"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/yellow_900"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextTextNewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="Name"
            android:textColor="@color/yellow_900"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitleapply" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</layout>